GPC/tests/examples/fail/errBoolNot.gpc

int errBoolNot() {
    
    int x = 5;
    bool y = !x;
    return x;

}
